表記ゆれ修正

--- a/hardproblem/1-02.html
+++ b/hardproblem/1-02.html
@@ -112,7 +112,7 @@
 　希海は欠陥だらけの階段へと足を掛け、登山者の心境で一歩また一歩と登っていく。後ろの女の子は、今どんな顔をしているのだろう。隠し事がばれずにすんだ安堵の表情か、不審な奴に会ったという怪訝な表情か。はたまた背を向けた途端にロボットらしい無表情にでも戻っているのかもしれない。
 （何やってんだろ私……）
 　おどり場に差し掛かった希海は、自嘲気味にため息をつく。
-　そんなに彼女のことが気になるなら、今からでも振り返ってもう一度話しかければいい。「変なこと聞いてごめんね」と笑って、そのあと気が済むまで世間話でも何でもすればいい。
+　そんなに彼女のことが気になるなら、今からでも振り返ってもう一度話しかければいい。『変なこと聞いてごめんね』と笑って、そのあと気が済むまで世間話でも何でもすればいい。
 　だが、希海にはどうしてもそれができないのだ。一度告げたさよならを撤回して引き返してくることがかっこ悪いと思っているのか、それとも何度も話しかけて彼女にしつこく思われるのが怖いのか。どちらにせよ下らない理由だ。それは希海も分かっている。分かってはいるが、どうしてもできないのだ。
 　いつだってそうだ。希海にとって、頭で理解することと実際に行動することの間には、次元の違いほどの大きな隔たりがある。そもそも振り返ってみたところで、止まってしまった会話が再び息を吹き返すとは希海には思えない。百歩譲ってそれができたとしても、どこかでまた変なこと言ってしまって気まずくなるのがオチだ。
 　背後で階段を駆け上がる音がした。
