--- a/hardproblem/1-03.html
+++ b/hardproblem/1-03.html
@@ -63,19 +63,19 @@
 　引き戸を隔てた向こう側から声がする。
 「あっ、できましたできました」
 　ようやくか、と希海は小さくため息をついた。
-　自分の体に刻印されたコードを読み取るのがそんなに難しかったのか、それとも単にどんくさいだけなのか。『女の子がコードの読み取りに手こずっては端末がホーム画面に戻り、その度に希海がもう一度読取画面を呼び出して、再び女の子に端末を手渡す』というサイクルをふたりは既に3周も行なっていた。
+　自分の体に刻印されたコードを読み取るのがそんなに難しかったのか、それとも単にどんくさいだけなのか。『女の子がコードの読み取りに手こずっては端末がホーム画面に戻り、その度に希海がもう一度読取画面を呼び出して、再び女の子に端末を手渡す』というサイクルをふたりは既に三周も行なっていた。
 「聞いてます？　読み取れましたよ」
 「ちょ、ちょっと！　服くらい着てから出てきなさいよ！」
 　女の子が裸で洗面所から出てきた。厳密に言うと裸ではなく脱いだ服で前を隠してはいるのだが、似たようなものである。
 「だって早くしないとまた元の画面に戻っちゃうじゃないですか」
 　そもそも読み取り画面が自動で戻ってしまうのは、カメラの誤起動による電池の消耗を防ぐためだ。したがってごく普通の一般的な端末の場合、一度コードを読み取ってしまうと、ボタン操作を行わない限りは勝手に待ち受けに戻ってしまうことはない。そして希海の携帯端末も、ごくごく普通の一般的なものである。
 「大丈夫だから！　戻らないから！」
-　女の子を洗面所に押し返し、受け取った携帯端末の液晶パネルに目を落とした。製品情報はご丁寧にも中日韓越英の5ヶ国語で書かれており、希海はその中の日本語で書かれた部分に画面をスクロールさせる。
+　女の子を洗面所に押し返し、受け取った携帯端末の液晶パネルに目を落とした。製品情報はご丁寧にも中日韓越英の五ヶ国語で書かれており、希海はその中の日本語で書かれた部分に画面をスクロールさせる。
 
 　<span class="simplified">型番</span> : SUM17F4JP1698
 　<span class="simplified">制造番号</span> : 09-130221-0802-000
 　<span class="simplified">制造・贩卖</span> : <span class="simplified">上海人偶机器人工学有限公司近畿支店</span>
-　カスタマーサポート : 0120-XXX-XXX (２４<span class="simplified">时间</span>)
+　カスタマーサポート : 0120-XXX-XXX （<span class="simplified">二十四时间</span>）
 
 　ビンゴ。ウェブで検索するまでもなく電話番号まで載っていた。しかも、ありがたいことにフリーダイヤルである。
 「どうでしたか？」
@@ -110,6 +110,7 @@
 　その言葉が喉まで出掛かったそのとき、
 
 　不意に呼び鈴が鳴った。
+　
 「あ、お客さんですよ」
 　女の子の表情が無邪気な少女のそれに戻る。
 　人が大事な話をしようとしているときに一体誰だ。希海は心の中で毒づきながらも、しぶしぶ玄関へと足を運ぶ。恋人も友達も居ない一人暮らしの大学生にとって、来客者とは訪問販売のセールスマンか国営放送の料金徴収と相場は決まっている。受信料はこの間払ったはずだから訪問販売だろうか。
@@ -127,9 +128,9 @@
 　希海が六秒目のカウントを口にすることはなかった。十五秒以内の本題。ある意味、思惑通りの展開である。
 「…………何のことですか？」
 　人間というものは、差し迫った状況になると意外なほど冷静になるものだ。
-「外見は中学生くらいの女の子で、身長は１５０センチほど。髪の毛は黒のロングヘア、おそらく後ろでふたつに縛ってある。アンドロイドだから、見た目は人間とほとんど変わらない」
+「外見は中学生くらいの女の子で、身長は１５０ｃｍほど。髪の毛は黒のロングヘア、おそらく後ろでふたつに縛ってある。アンドロイドだから、見た目は人間とほとんど変わらない」
 　間違いない、あの子のことだ。
-「中学生くらい、身長１５０センチ、黒のふたつ結び……」
+「中学生くらい、身長１５０ｃｍ、黒のふたつ結び……」
 　希海は男の言葉をわざとらしく反芻し、記憶の奥底を丹念に調べ上げるふりをする。どうして女の子がここにいると分かったのか。目の前の男は何者なのか。そんなことを考えている余裕などない。希海は、今この場をやり過ごすことにすべての処理能力を注ぎ込んでいた。
 「え〜っと……。すいません、やっぱりよく分からないです。何か勘違いでもしてるんじゃないですか」
 　そんなわけだから、事情を知らない女の子が様子をうかがいに玄関までやって来ていたことに気付かなかったのも、仕方のないことだと言える。
