--- a/hardproblem/1-05.html
+++ b/hardproblem/1-05.html
@@ -18,7 +18,7 @@
 「ふぅ」
 　ゆっくりと紫煙を吐き出し、ヤニで黄ばんだ天井を仰いだ。希海は、再び喫煙所までタバコを吸いに来ている。
 　一度に色んな話を聞きすぎて頭が付いていっていなかった。もちろん。話の内容は理解できるのだが、その中の情報ひとつひとつを精査することがどうしてもできない。
-　壁の時計を見ると、時刻は深夜の1時半。無理もないかと希海は思う。ただでさえ今日は早起きだったのに、もうこんな時間だ。心身ともにすっかり疲れてしまっている。帰ったら軽く10時間は寝てしまうだろう。下手したらそれ以上もありうる。早朝立てた早寝早起きという目標は、早くも達成が困難になりつつあった。
+　壁の時計を見ると、時刻は深夜の一時半。無理もないかと希海は思う。ただでさえ今日は早起きだったのに、もうこんな時間だ。心身ともにすっかり疲れてしまっている。帰ったら軽く十時間は寝てしまうだろう。下手したらそれ以上もありうる。早朝立てた早寝早起きという目標は、早くも達成が困難になりつつあった。
 「…………」
 　希海はぼんやりとタバコから立ち上がる煙を見つめている。絶え間なく立ち上っては渦を巻いて拡散していく煙。その流れは決して定常ではなく、大きく揺らいでは静かに流れ、また揺らいでは静かに流れてを不規則に繰り返している。
 （ハルカ……、か）
@@ -37,22 +37,22 @@
 「いやなに。むしろ私の方こそ急かしてしまったみたいだね」
 「あ、じゃあ待合室に戻りましょうか」
 　そう言って歩き出そうとする希海だが、東は立ち止まったまま動こうとしない。希海が声を掛けようと口を開きかけた瞬間。
-「タバコ、1本もらえるかね」
+「タバコ、一本もらえるかね」
 　喫煙所に二人して入った。希海がズボンの後ろポケットからタバコを取り出すと、その赤一色のパッケージを見た東が「おっ」と声を上げた。
 「『<ruby><span class="simplified">红天演</span><rp>《</rp><rt>こうてんえん</rt><rp>》</rp></ruby>』とはずいぶん渋いね」
 「……ほっといて下さい」
 　西部解放まもない頃に販売が開始された、いわゆるオッサンタバコである。近頃では若い人はおろか年配の人ですら吸っているのを見かけないが。
 「どうぞ」
 　ポケットでくしゃくしゃになったタバコを取り出し、ライターと一緒に渡す。自分が尻に敷いていたものを差し出していいものかと希海は思ったが、相手が欲しいと言ったのだ。何も気にすることはあるまい。
-　東がタバコを咥え、ライターで火を点ける。さっき吸ったばかりなのだが、せっかくなので希海ももう1本吸うことにした。
+　東がタバコを咥え、ライターで火を点ける。さっき吸ったばかりなのだが、せっかくなので希海ももう一本吸うことにした。
 　煙を吐き出すと沈黙が訪れる。
 　この男との間では、本日最初の沈黙だった。
-　希海は会話が得意な方ではない。元からわりと人見知りするタイプなのもあるが、多くの人が自然にできるはずの気軽な発言ができないのだ。「ああ言ったらどう思われるかな」とか「こういうときは何を言うのがいいのかな」とか、そういうことを逡巡しているうちに沈黙が1分も2分も続いてしまって、結局いつも「今更なにか言っても唐突になっちゃうな」とだんまりを通すことになってしまう。
+　希海は会話が得意な方ではない。元からわりと人見知りするタイプなのもあるが、多くの人が自然にできるはずの気軽な発言ができないのだ。「ああ言ったらどう思われるかな」とか「こういうときは何を言うのがいいのかな」とか、そういうことを逡巡しているうちに沈黙が一分も二分も続いてしまって、結局いつも「今更なにか言っても唐突になっちゃうな」とだんまりを通すことになってしまう。
 　そしてその点において、東はとてもありがたい相手だった。こちらが発言せずとも勝手にべらべらと喋って、あれこれと質問をぶつけてくる。希海は特に何も考えず、ただ聞かれたことにだけ答えておけばいい。
 　だからこそ、この度の東の沈黙は希海の目にも、ものすごく特異なものに映った。
 「…………」
 　タバコを吸いながら横目でちらりと<ruby>窺<rp>《</rp><rt>うかが</rt><rp>》</rp></ruby>ってみる。東は火を点けたタバコに口を付けようとはせず、目をつぶったまま何かを考えている様子だった。
-　相手が目を閉じているのを良いことに、希海は東の顔をまじまじと凝視する。顔に刻まれた皺は案外深く、白髪の目立つ髪は前頭部がかなり後退していた。会話の最中に相手の胸元や手先を見る癖がある希海は、こうして陰から観察でもしなければ人の顔などろくに見ることがない。漠然と40代手前くらいかと思っていた目の前の男は、よくよく見ると50代くらいの顔つきをしていた。
+　相手が目を閉じているのを良いことに、希海は東の顔をまじまじと凝視する。顔に刻まれた皺は案外深く、白髪の目立つ髪は前頭部がかなり後退していた。会話の最中に相手の胸元や手先を見る癖がある希海は、こうして陰から観察でもしなければ人の顔などろくに見ることがない。漠然と四十代手前くらいかと思っていた目の前の男は、よくよく見ると五十代くらいの顔つきをしていた。
 　！！
 　東が突然目を開いた。希海は慌てて視線をあさっての方向へと向ける。
 「青山君」
@@ -78,17 +78,17 @@
 　ニューロワームとは、オルゴン場を媒介して人の脳に住み着く情報病原体だ。鬱やストレスなど精神免疫力が落ちているときに感染しやすく、発症と同時に患者は眠ったままになってしまう。
 「そうでなくたって、普通の人は昔のオーナーの記憶を<ruby>快<rp>《</rp><rt>こころよ</rt><rp>》</rp></ruby>くは思わないだろう。彼女が問題なく仕事をこなしていたとしても、関係のこじれが何かしらのトラブルに発展するかもしれない」
 　思ってもみなかった話に希海は青ざめる。彼女は記憶を失っただけで、それ以外に何も問題はないのだと思っていた。いや、実際にその通りであり、記憶の欠落以外はまったくの正常だ。だが、その欠落した記憶こそが唯一にして最大の問題点だったのである。
-「では出荷をしないで、ここの施設で一生を過ごせるのかというとこれも難しい。アンドロイドの維持費はオーナー負担分だけでも最低月5万。潜在的に企業が負担している分まで含めるとこれの2から4倍だな。いくら世界に名だたるSDRといえども、こんな無駄な費用をポンと払ってくれるほど太っ腹じゃない。ちなみに多くのアンドロイドは無停止システムだから、電源を切って置いておくことはできんぞ。スイッチをOFFにした瞬間から排熱機構がストップして情報の揮発による脳死へと一直線だ」
+「では出荷をしないで、ここの施設で一生を過ごせるのかというとこれも難しい。アンドロイドの維持費はオーナー負担分だけでも最低月五万。潜在的に企業が負担している分まで含めるとこれの二から四倍だな。いくら世界に名だたるＳＤＲといえども、こんな無駄な費用をポンと払ってくれるほど太っ腹じゃない。ちなみに多くのアンドロイドは無停止システムだから、電源を切って置いておくことはできんぞ。スイッチをオフにした瞬間から排熱機構がストップして情報の揮発による脳死へと一直線だ」
 「……それで私ですか」
-「うむ。君は彼女の過去についてすでに知っているわけだからな。彼女が昔の記憶を思い出して、仕事が手に付かなくなったりしたとしても無下に扱うことはないだろう？　資金の面なら私が出すから心配はいらないよ。こう見えて結構稼いでいるんだが、いかんせん貧乏性で使う機会がなくてね。今ではタワーマンションのペントハウスが買えるくらいにまでに貯金が溜まってしまったよ。それに言葉は悪いがハルカは“中古品”だ。価格的には新品の半分以下だし、その上社員の私なら、割引価格で購入できる」
+「うむ。君は彼女の過去についてすでに知っているわけだからな。彼女が昔の記憶を思い出して、仕事が手に付かなくなったりしたとしても無下に扱うことはないだろう？　資金の面なら私が出すから心配はいらないよ。こう見えて結構稼いでいるんだが、いかんせん貧乏性で使う機会がなくてね。今ではタワーマンションのペントハウスが買えるくらいにまでに貯金が溜まってしまったよ。それに言葉は悪いがハルカは『中古品』だ。価格的には新品の半分以下だし、その上社員の私なら、割引価格で購入できる」
 　確かに東の言い分には理があるように思える。思えるが、希海がハルカのオーナーになるという帰結に至るには、まだ十分な<ruby>理屈<rp>《</rp><rt>ロジック</rt><rp>》</rp></ruby>があるとは言えない。
 「それなら、私よりもっと適した人がここいるじゃないですか」
 「ん？　私かい？」
 　そう。今までの話は要するに、彼女の過去を知っており彼女に理解を示す人物が、新しいオーナーになるべきだということだった。だったら、わざわざどこの馬の骨ともしらない希海よりも、この男が自ら彼女を買い上げて、オーナーになればいいではないか。
-「もちろんそれも考えたさ。だが私は多忙な身でね。中々彼女に構ってやれないんだ。一人暮らしで2日3日家に帰らないこともざらにあるような人間が主人だとアンドロイドがかわいそうだろ？　それに近頃、健康診断の結果が<ruby>芳<rp>《</rp><rt>かんば</rt><rp>》</rp></ruby>しくなくてね。何かの拍子でぽっくりと逝ってしまって、彼女を2度も同じ目に合わせたくない」
+「もちろんそれも考えたさ。だが私は多忙な身でね。中々彼女に構ってやれないんだ。一人暮らしで二、三日家に帰らないこともざらにあるような人間が主人だとアンドロイドがかわいそうだろ？　それに近頃、健康診断の結果が<ruby>芳<rp>《</rp><rt>かんば</rt><rp>》</rp></ruby>しくなくてね。何かの拍子でぽっくりと逝ってしまって、彼女を二度も同じ目に合わせたくない」
 　解せなかった。
-　もちろん希海とて頭では彼の話を理解している。だが、世界に100億人、ここ近畿市だけでも1800万近い人間がいるというのに、なぜ希海なのか。まるで自分だけ置いていかれたような気分だった。
-　1800万人の中から1人、また1人と抜けていき、最後に残ったのが希海と東だ。そしてその東も今しがた抜けてしまい、女の子に対する責任と使命感が希海の肩に重くのしかかる。
+　もちろん希海とて頭では彼の話を理解している。だが世界に８０億人、ここ近畿市だけでも１８００万近い人間がいるというのに、なぜ希海なのか。まるで自分だけ置いていかれたような気分だった。
+　１８００万人の中から一人、また一人と抜けていき、最後に残ったのが希海と東だ。そしてその東も今しがた抜けてしまい、女の子に対する責任と使命感が希海の肩に重くのしかかる。
 「……最初からそのつもりだったんですか」
 　希海は暗く、途切れそうな声で尋ねる。東は答えなかったが、希海とて引くつもりはなかった。俯き、目を合わせずに東の足元を睨みつける。拳を強く握りしめ、吐き捨てるようにゆっくりと希海は言い放った。
 「最初から新しい主人になってもらうつもりだったから、私に、あの子の過去を聞かせたんですか。あの子のことをどうしようかと考えていたところにちょうど都合のいいやつが来たから……、あの話を聞かせたんですか……」
@@ -112,7 +112,7 @@
 　東からオーナーになる話を聞かされてからというものの、意識の奥底では、ずっとそんなことを考えていたのだと思う。
 「彼女と上手くやっていけるかどうか不安なのかい？」
 　希海は無言で小さく頷く。
-　いつだってそうだ。頭では『こうすべき』と分かっていても、実際に行動に移す段になるといつも“心”に負けてしまう。怠惰や臆病風といった“心”にだ。女の子が連れていかれたときに見ているだけしかできなかったことも、会話が上手くできないのも、もう1年近くも大学へ行っていないのも、みんなそうだ。
+　いつだってそうだ。頭では『こうすべき』と分かっていても、実際に行動に移す段になるといつも心に負けてしまう。怠惰や臆病風といった心にだ。女の子が連れていかれたときに見ているだけしかできなかったことも、会話が上手くできないのも、もう一年近くも大学へ行っていないのも、みんなそうだ。
 　そしてあの子は、そんな希海と対極の存在である。
 　身に降りかかる不幸を受け入れることができる強さ。自らのなすべきことを無欲に追いかけられるひたむきさ。どんなに辛いときでも笑っていられる純真さ。希海が持ち得ないもののすべてをあの子は持っている。自分があの子と上手くやっていけるとは希海には到底思えなかった。
 「さっき、ここに来る前に彼女と話をしたんだがね」
