--- a/hardproblem/1-06.html
+++ b/hardproblem/1-06.html
@@ -22,12 +22,12 @@
 　ひと気のない廊下を渡って待合室に戻る。東は椅子に座って希海の帰りを待ち構えていた。
 「準備はできたかな」
 　無言でうなずいた。希海はこれからここで、あの子と顔を合わせることになっている。準備とは他でもない心の準備だ。顔合わせが済むと、あのロボットの女の子は今日から希海の家族となる。
-　そう、今日からだ。明日からでも来週からでもない。「間が空きすぎて変に気まずくなるといけないから」という東のいらぬお節介で、早くも今日から彼女と一緒に暮らすことになってしまったのだ。心の準備よりももっと切実な、生活の準備すら整っていないというのに。
+　そう、今日からだ。明日からでも来週からでもない。『間が空きすぎて変に気まずくなるといけないから』という東のいらぬお節介で、早くも今日から彼女と一緒に暮らすことになってしまったのだ。心の準備よりももっと切実な、生活の準備すら整っていないというのに。
 （やっぱり私、いいように利用されたんじゃ……）
-　そんな考えが頭をよぎるが、もはや何を言っても手遅れだ。いや、厳密に言うと今からでも「やっぱやめた」と、無かったことにできるのかもしれない。だが、今更ちゃぶ台をひっくり返す度胸など希海にはありやしなかった。
+　そんな考えが頭をよぎるが、もはや何を言っても手遅れだ。いや、厳密に言うと今からでも『やっぱやめた』と、無かったことにできるのかもしれない。だが、今更ちゃぶ台をひっくり返す度胸など希海にはありやしなかった。
 「青山君も分かっていると思うが、念のため確認しておこう。今のところ彼女が覚えているのは、廃品置き場から抜けだした後のことだけだ。それより前の記憶――以前の主人との間のことを彼女は覚えていない」
 　あくまでも今のところ、だ。ひょっとすると今後、何かの拍子で思い出すことがあるかもしれない。そのとき、希海は彼女にどんな言葉を投げかけてやれるのだろうか。
-「昔の記憶については彼女に話していないし、自分で思い出すまでは青山君も話さないようにしてくれ。ウチの会社にあるデータについて聞かれたら『保管期限が過ぎてしまってもう残っていない』とでも言っておくよ。君が彼女の新しいオーナーになったことについては……、そうだな『<ruby>FIANC<rp>《</rp><rt>ファイアンク</rt><rp>》</rp></ruby>の情報欠損に関する臨床研究のためで、君は研究の協力者として選ばれた何も知らない一般人』ということしよう。そして君が協力者に選ばれた理由はズバリ“縁”だ」
+「昔の記憶については彼女に話していないし、自分で思い出すまでは青山君も話さないようにしてくれ。ウチの会社にあるデータについて聞かれたら『保管期限が過ぎてしまってもう残っていない』とでも言っておくよ。君が彼女の新しいオーナーになったことについては……、そうだな『<ruby>ＦＩＡＮＣ<rp>《</rp><rt>ファイアンク</rt><rp>》</rp></ruby>の情報欠損に関する臨床研究のためで、君は研究の協力者として選ばれた何も知らない一般人』ということしよう。そして君が協力者に選ばれた理由はズバリ“縁”だ」
 　確認のはずだったのだが、思わぬ口裏合わせに話が発展してしまった。希海は東の言った言葉を頭の中で復唱する。ここをしっかり押さえておかないと、あとでとんでもないボロが出てしまう。何らかの理由で廃棄された彼女は、廃品置き場から逃げ出してきたところを間一髪で連れ戻された。長い間メンテを受けていなかったせいで昔の記憶が欠落していて、その内容は東ですら知らないし調べられない。一種の記憶喪失である彼女は貴重な研究対象であり、その協力者として彼女と縁のあった自分が里親に選ばれた。
 （ん、待てよ……？　そういえば）
 「名前はどうするんですか？」
@@ -43,14 +43,14 @@
 　想定外の課題に慌てふためく。東は少し楽しそうに、そんな希海に追い打ちをかけた。
 「じゃあ彼女を呼んでくるから。それまでに考えておいてくれ」
 「はぁ！？」
-　そんな1分やそこらで思いつくわけがない。子供の名前を考えるときだって、字面や響きを練ったり姓名判断にかけたりして、あれこれと思い悩んで決めるというのに。
+　そんな一分やそこらで思いつくわけがない。子供の名前を考えるときだって、字面や響きを練ったり姓名判断にかけたりして、あれこれと思い悩んで決めるというのに。
 　そして東は待合室の奥にある廊下の闇に消えてしまい、希海はだだっ広い待合室に一人残された。深夜の静寂が耳鳴りとなって希海の鼓膜に浸透していく。
 （ええと、ええっと）
 　希海は脳みそをフル回転させて必死に考える。
 （あの子はロボットなんだから、女の子なんだから）
 　そうして最初に浮かんだのは『ロボ子』というあまりにもあんまりな名前だった。
 （アホかっ、もっとマシなのは……）
-　だが思考というものは一度思い浮かんでしまうと、それにずるずると引っ張られるものである。いくら追い払おうとしても希海の頭からロボ子の3文字が離れず、思い付く名前すべてに『ロボ』か『子』のどちらかが付いてしまう。
+　だが思考というものは一度思い浮かんでしまうと、それにずるずると引っ張られるものである。いくら追い払おうとしても希海の頭からロボ子の三文字が離れず、思い付く名前すべてに『ロボ』か『子』のどちらかが付いてしまう。
 （……ロボ美、ロボ江、ロボ子。ああもう違う違う！　……ロボ香、ヒュー子、マノ子。だから違うって！）
 　そうこうしている内に、東はさっさと女の子を連れて帰ってきてしまったようだ。待合室の奥にある廊下から、こつこつと足音が聞こえ、希海の視線がそちらに釘付けになる。
 　暗がりの中から、ふたつの影が現れた。
@@ -75,7 +75,7 @@
 「そんなこと言っていると、ずるずると決められないまま気が付けば数週間……なんてことになるぞ。私の邪推だが、君は今日できることを明日、明後日に引き伸ばすタイプだろう」
 　悲しいかな図星である。そんなにわかりやすい性格なのか、東の観察眼が人並み外れているのかはわからない。
 「だ、大丈夫ですよ。今日中にはちゃんと決めますって。ていうか帰りどうすれば良いんですか？」
-　壁の時計は深夜の2時を指していた。この時間だと電車やバスはもう走っていない。希海のアパートからここまで車で約30分。歩いて帰れない距離ではないが、そもそも道がわからなかった。
+　壁の時計は深夜の二時を指していた。この時間だと電車やバスはもう走っていない。希海のアパートからここまで車で約二十分。歩いて帰れない距離ではないが、そもそも道がわからなかった。
 「ああ、もう遅いからね。私の車で送っていくよ」
 　タクシーを呼ばずに自分が送るというのが、この男らしかった。なるほど貧乏性か、と希海は思う。ありがたい話ではあるのだけど。
 「助かります。そういうことならさっさと行きましょうよ。あんまり遅くなると、」
