--- a/hardproblem/1-04.html
+++ b/hardproblem/1-04.html
@@ -21,7 +21,7 @@
 　あの後、男の車が向かった先は、企業の研究所らしき施設だった。詳しい場所は分からない。もともとこの辺りは馴染みが薄い場所だし、何よりあのときの希海は焦っていて周りの景色をじっくり眺めている余裕などなかった。<ruby>中央環状線<rp>《</rp><rt>ち　ゅ　う　か　ん</rt><rp>》</rp></ruby>を西に向かって走り、その後北に曲がったところまでは覚えているのだが、それ以降がさっぱりである。
 （<ruby>暮葉<rp>《</rp><rt>くれは</rt><rp>》</rp></ruby>洞のあたりなのかな……）
 　どことも知れぬ場所の研究施設。だが、ひとつだけ希海が知っていることがある。
-　<ruby>上海人偶機器人工学<rp>《</rp><rt>Ｓ　　　　　Ｄ　　　　　Ｒ</rt><rp>》</rp></ruby><ruby>有限公司<rp>《</rp><rt>Ｃｏ．Ｌｔｄ．</rt><rp>》</rp></ruby>。
+　<ruby>上海人偶機器人工学<rp>《</rp><rt>S　　　　　D　　　　　R</rt><rp>》</rp></ruby><ruby>有限公司<rp>《</rp><rt>Co.　Ltd.</rt><rp>》</rp></ruby>。
 　この研究所を所有する法人の名前だ。入り口の門に大きく名前が書かれているのを見たし、施設内でも社名の入ったポスターが貼られているのを何枚か見かけた。そして、あの子の二次元コードで見た製造情報にも、
 「あ……」
 　タバコの灰が重力に負けて崩れ落ちた。まだろくに吸っていないというのに。「しまった勿体ない」と言わんばかりに、希海はいそいそとタバコを咥えて煙を肺に入れる。今日だけで何本のタバコを無駄に灰に変えただろう。
@@ -44,7 +44,7 @@
 「あの子、大丈夫なんですか」
 「ああ。処置自体は一時間ちょっとで終わったし、その後の動作テストでも大きな問題はなかった」
 　よかった。希海は胸をなでおろす。あんな状況でぽっくりと逝かれては、いくら相手がロボットといえども流石に寝覚めが悪い。ちょっと変わっているところがあったけれど、いい子だった。どんな目的で作られたのかは知らないが、家政婦にせよ介護用にせよ彼女ならきっと立派な働きをするだろうと希海は思う。
-　だが、“とりあえず”助かった女の子の先に待ち構えているものが明るい未来なのかどうかは、正直なところ分からない。何せ彼女は捨てられたロボットなのだ。記憶がなかったり、突然倒れたりしたあの様子だと、どこかに不具合があるのではないだろうか。廃棄された原因も恐らくそれなのだろう。助かったは良いものの、やはり満足に仕事ができなくて解体工場行き、という可能性だって大いにありうる。
+　だが、『とりあえず』助かった女の子の先に待ち構えているものが明るい未来なのかどうかは、正直なところ分からない。何せ彼女は捨てられたロボットなのだ。記憶がなかったり、突然倒れたりしたあの様子だと、どこかに不具合があるのではないだろうか。廃棄された原因も恐らくそれなのだろう。助かったは良いものの、やはり満足に仕事ができなくて解体工場行き、という可能性だって大いにありうる。
 「彼女、バグか何かでもあるんですか」
 「いや、彼女には初期不良も予期せぬ後発的トラブルも発生していないよ。ハード・ソフト共にね」
 「じゃあどうして――」
@@ -73,13 +73,13 @@
 　そう言って東は人差し指をぴんと立てる。
 「彼女は確かにウチの会社の製品だ。<ruby>上海人偶機器人工学<rp>《</rp><rt>Ｓ　　　　　Ｄ　　　　　Ｒ</rt><rp>》</rp></ruby>サマリー１７シリーズ第４世代の女性型。製品と言っても、まだ実証機としての意味合いが強くてね。少しばかり抜けているところが見受けられたかもしれない。余談だがウチの製品に限らず、多くのアンドロイドは盗難対策の一環として<ruby>全球定位系統<rp>《</rp><rt>Ｇ　　Ｐ　　Ｓ</rt><rp>》</rp></ruby>から得た位置情報をサーバーへ定期送信していてね。彼女の居場所を突き止めたのもこれを使ったというわけさ」
 　やはりＧＰＳか。希海の想像していた通りである。女の子と会ってから、ものの一時間程度で自宅の場所まで押さえられるなんておかしいと思っていた。
-「次に二つ目。記憶の欠損と意識障害について。一般的なアンドロイドの頭脳には<ruby>ＦＩＡＮＣ<rp>《</rp><rt>フ　ァ　イ　ア　ン　ク</rt><rp>》</rp></ruby>――<ruby>フラクタル集積人工神経回路<rp>《</rp><rt>Fractale Integrated Artificial Neuro-Circuit</rt><rp>》</rp></ruby>というニューラルプロセッサが使われている。もちろんサマリー17シリーズにも搭載されているんだが、ウチのは他社と少し違った特別仕様でね。オルゴンを利用して<ruby>神経<rp>《</rp><rt>ニューラル</rt><rp>》</rp></ruby>ネット内で大規模な<ruby>量子もつれ<rp>《</rp><rt>エンタングルメント</rt><rp>》</rp></ruby>を発生させる仕組みになっているんだが、いかんせんこれが熱に弱い。電子の<ruby>干渉性<rp>《</rp><rt>コヒーレンス</rt><rp>》</rp></ruby>が熱によって失われるからだ。もちろん、そうならないように普段は冷媒を使って温度を一定に保ってるんだが、この冷媒も放っておくとどんどん気化していって、そのうち回路内の熱を排出できなくなっていく。つまり長い間メンテを受けずにいるとオーバーヒートしてしまうというわけさ。熱によって<ruby>干渉破壊<rp>《</rp><rt>デコヒーレンス</rt><rp>》</rp></ruby>が発生すると記憶障害や意識障害が起きるからね」
+「次に二つ目。記憶の欠損と意識障害について。一般的なアンドロイドの頭脳には<ruby>ＦＩＡＮＣ<rp>《</rp><rt>ファイアンク</rt><rp>》</rp></ruby>――<ruby>フラクタル集積人工神経回路<rp>《</rp><rt>Fractale Integrated Artificial Neuro-Circuit</rt><rp>》</rp></ruby>というニューラルプロセッサが使われている。もちろんサマリー17シリーズにも搭載されているんだが、ウチのは他社と少し違った特別仕様でね。オルゴンを利用して<ruby>神経<rp>《</rp><rt>ニューラル</rt><rp>》</rp></ruby>ネット内で大規模な<ruby>量子もつれ<rp>《</rp><rt>エンタングルメント</rt><rp>》</rp></ruby>を発生させる仕組みになっているんだが、いかんせんこれが熱に弱い。電子の<ruby>干渉性<rp>《</rp><rt>コヒーレンス</rt><rp>》</rp></ruby>が熱によって失われるからだ。もちろん、そうならないように普段は冷媒を使って温度を一定に保ってるんだが、この冷媒も放っておくとどんどん気化していって、そのうち回路内の熱を排出できなくなっていく。つまり長い間メンテを受けずにいるとオーバーヒートしてしまうというわけさ。熱によって<ruby>干渉破壊<rp>《</rp><rt>デコヒーレンス</rt><rp>》</rp></ruby>が発生すると記憶障害や意識障害が起きるからね」
 　急に難しい話になってしまった。希海は慌てて頭の中を整理する。つまり、あの少女のコンピュータは演算に巨視的な量子効果を利用しているのだけれど、そのせいで熱に弱くて、長時間放置していると意識が途切れたり、記憶が欠落したりするということなのだろう。本当はもっとややこしい機構や物理過程が関わってくるのだろうが、今の希海にはその程度の理解で十分だと思えた。
 「少し専門的になってしまったが、大丈夫かな？」
 　必死に頭を動かしている様が伝わったのか、東は会話を中断して希海の思考が追いつくのを待ってくれていた。
 「えっとつまり、逃げ出したあの子がメンテも受けずにふらふらほっつき歩いていたから、記憶を失ったり、意識が途切れたりしたってことですよね？」
-「まあそういうことだな。今日、おっともう昨日か。昨日、彼女をここに運び込んでから真っ先に冷媒の補充をやったんだが、もうすっからかんだったよ。あと1日2日遅かったら、彼女のデータは完全に飛んでしまっていただろうね」
-　1日2日という具体性を帯びた言葉に希海の背筋が少しだけ寒くなる。この男が来なければ、意識を失った女の子の処置を自分一人でしなければならなかったかもしれないのだ。もしそうなっていたら、希海には何ができただろう。慌てふためくだけで、彼女の脳死を待つしかできなかったのかもしれないし、案外、サービスセンターにでも電話を掛けて判断を仰ぐくらいはできたのかもしれない。いずれにせよ、そういう事態にならなかった自らの幸運に感謝するのみだ。現実に目の前の男が希海の家を訪ねてきて、女の子が大事に至ることはなかったのだから。
+「まあそういうことだな。今日、おっともう昨日か。昨日、彼女をここに運び込んでから真っ先に冷媒の補充をやったんだが、もうすっからかんだったよ。あと一日二日遅かったら、彼女のデータは完全に飛んでしまっていただろうね」
+　一日二日という具体性を帯びた言葉に希海の背筋が少しだけ寒くなる。この男が来なければ、意識を失った女の子の処置を自分一人でしなければならなかったかもしれないのだ。もしそうなっていたら、希海には何ができただろう。慌てふためくだけで、彼女の脳死を待つしかできなかったのかもしれないし、案外、サービスセンターにでも電話を掛けて判断を仰ぐくらいはできたのかもしれない。いずれにせよ、そういう事態にならなかった自らの幸運に感謝するのみだ。現実に目の前の男が希海の家を訪ねてきて、女の子が大事に至ることはなかったのだから。
 「けっこう危なかったんですね……。でもよかったです。あの子、完全に治ったんですよね？」
 「それについてだが……治ったとも言えるし、治っていないとも言える」
 　軽い気持ちで投げかけた質問の答えは予想外のものだった。希海の顔が思わず曇る。それまでの東の口ぶりには楽天的な色が漂っていたし、表情にも別段暗いものは見られなかったから油断をしていた。
@@ -103,17 +103,17 @@
 　東は、やおら目を瞑って一つの名前を呟いた。
 「彼女がかつての主人からもらった名前だ」
 
-　ハルカが出荷されたのは、今からもう2年も前になる。
-　購入者は七園区に住む50代の男性。とある中小企業の経営者で、3人居た子供は全員が就職に伴って実家を巣立ち、夫婦2人で悠々自適に暮らしていた。彼がアンドロイドを買ったのは自分が使うためではなく、仕事が忙しくろくに家事をする暇もない次男へのプレゼントである。
+　ハルカが出荷されたのは、今からもう二年も前になる。
+　購入者は七園区に住む五十代の男性。とある中小企業の経営者で、三人居た子供は全員が就職に伴って実家を巣立ち、夫婦2人で悠々自適に暮らしていた。彼がアンドロイドを買ったのは自分が使うためではなく、仕事が忙しくろくに家事をする暇もない次男へのプレゼントである。
 　どうしてそんなことまで東が知っているのかというと、アンドロイドの購入に際してＳＤＲはオーナーとなる人間の身辺調査を行なっているからだ。
-　アンドロイドというものはかなり高額で、高級外車が1台買えてしまうくらいの値段である。ローンを組む人だって少なくはない。そんなわけでクライアントの債務能力の査定をする必要があるのだが、身辺調査の最も大きな目的はこれとは別にある。それは、オーナーがアンドロイドを正しく利用するのかという点の見極めだ。
+　アンドロイドというものはかなり高額で、高級外車が一台買えてしまうくらいの値段である。ローンを組む人だって少なくはない。そんなわけでクライアントの債務能力の査定をする必要があるのだが、身辺調査の最も大きな目的はこれとは別にある。それは、オーナーがアンドロイドを正しく利用するのかという点の見極めだ。
 　よく知られている通り、アンドロイドとは人間を模すことを最大の目的として設計されている。どれくらい人間を模すかは企業や製品によってまちまちだが、ＳＤＲは特にその傾向が強く、サマリー17シリーズなどはじっくりと観察でもしなければ容易にロボットだとは分からない。それだけ人間に似ているのだから、アンドロイドを使って良からぬことを企む輩も当然、少なからず出てくる。
 　代表的な例が、アンドロイドに対する性行為の強要だ。オーナー自身による暴行から、第三者に対する売春行為の強要まで含めると、それこそ数えきれないほどの件数が世界中で報告されている。また、アンドロイドを犯罪に利用するケースもこれに負けじと多い。軽微なものでは万引きや賭博現場の見張り程度なのだが、深刻なものになると、過去にはロボットを使った法廷での偽証事件すら起きている。このようなアンドロイドにまつわる様々な問題は世界規模で発生しており、先進国を中心に規制の強化が叫ばれている状況だ。
 　アジア屈指のアンドロイドメーカーであり常に批判の矢面に立たされてきたＳＤＲも近頃はそういった評判を気にしてか、つい数年前に新たな自主規制を導入した。それが「アンドロイド利用に関する倫理規定」である。規定には性行為の強要や犯罪用途への利用など、アンドロイドの利用に際して行ってはならない行為が事細かに定められており、オーナーは契約締結時にこの規定を順守する旨の誓約書を提出しなければならない。
 　もちろん、クライアントはこの誓約書にしっかりとサインをした。仕事で忙しかったはずの息子のサインがあるのは、父親が彼のアパートまでサインをもらいに行ったのだろう。几帳面な彼らの様子に、契約担当者は「大丈夫だろう」と思ったに違いない。実際、身辺調査では大きな問題は散見されなかったし、彼らが倫理規定に違反したいう事実は今日においても確認されていない。
-　そして東が第一報を聞いたのは、つい1週間ほど前のことだ。
+　そして東が第一報を聞いたのは、つい一週間ほど前のことだ。
 　自殺だった。
-　長い間連絡が取れないことを不審に思った父親が、息子のアパートを尋ねたところを発見した。警察の鑑定によると死亡したのは1ヶ月ほど前。方法はドアノブとタオルを使った首吊りで、遺書は見つからなかったという。自殺の原因は今も不明だが、両親は仕事での過労が原因とみて、息子が務めていた会社を相手に訴訟を起こすつもりらしい。
+　長い間連絡が取れないことを不審に思った父親が、息子のアパートを尋ねたところを発見した。警察の鑑定によると死亡したのは一ヶ月ほど前。方法はドアノブとタオルを使った首吊りで、遺書は見つからなかったという。自殺の原因は今も不明だが、両親は仕事での過労が原因とみて、息子が務めていた会社を相手に訴訟を起こすつもりらしい。
 　東もＳＤＲの関係者として現場の写真を見せてもらったのだが、あの光景はおそらく一生忘れることがないだろう。腐敗した遺体に寄り添って、あどけない顔のアンドロイドが事切れていたのだ。
 　良く知った顔だった。主人が忙しいからとひとりでメンテナンスにやってきては、今日はどんな料理を作っただの、どんな話をしただの、楽しそうに話していたあのアンドロイド。彼女や彼女の同型機が幼いのはまだ精神が発達段階であるためで、いわば仕様とも言えるのだが、そのこと差し引いてもハルカはまるで小さな子供のようだった。子供のように一日一日を大切に生きていたと東は思う。
 　だが、腐敗した遺体に寄り添う彼女の表情からは、そんな幼さなどみじんも感じられなかった。すべてを悟ったような穏やかな顔。想定年齢や稼動時間の多寡に関わらず、アンドロイドはときどきこういう表情をすることがある。その向こう側で彼らが何を考え、何を感じているのかを東は知らない。恐らく知る術などないのだろう。
@@ -125,9 +125,9 @@
 　最終メンテから既に2ヶ月ほどが経っていたため、彼女のデータはほとんど消えてしまっていると予測されていたし、何より所有者である父親がそのまま眠らせてやってくれと言っていた。息子に寄り添って事切れる彼女の姿に、両親としても思うところがあったのだろう。棺にはハルカの髪を<ruby>一房<rp>《</rp><rt>ひとふさ</rt><rp>》</rp></ruby>切り分けたものが入れられ、主人とともに一足先に天へと帰っていった。そして残されたハルカも、数週間後には系列会社の手によって解体されることが決まり、あとはうす暗い廃品置き場で滅びの時をただひたすらに待ち続けるはずだった。
 　そして、それからさらに数日後。
 　「廃品置き場からハルカが居なくなった」という報告を部下から受けたとき、東は耳を疑った。機能を停止したと思っていたロボットが蘇りひとりでに歩き出したというのでは、まるでゾンビではないか。最初は誰かが勝手にどこかへ移動させたのだと思い、廃品置き場をくまなく探したが一向に見つからない。
-　昼食を抜いて事業所内を端から端まで探し、まさか思って位置情報を検索してみて今度は我が目を疑った。ハルカの位置情報デバイスが動作しているのだ。モニタ上のカーソルが指し示す住所は真浜区真揺洞漸新台2丁目。事業所から直線距離にして6kmほど離れた場所である。
-　東は情報端末を片手に大慌てで車を出した。停止したFIANCの自発的再起動。聞いたことがないわけではなかったが、東とて数本の論文に引用されているのを見たことがある程度で、今の今まですっかり頭から抜けていた。実際に自分が出くわさなければ二度と思い出すこともなかっただろう。それくらい例外的な現象だ。
-　東がGPSの位置情報を頼りにたどり着いたのは3階建てのボロアパートだった。端末が指し示すハルカの場所は建物の一番東の部屋。下から順にチャイムを鳴らしていくと、1階は無人、2階には40代の中年男性、3階には内気なくせに負けん気だけは人一倍強そうな女子大生が住んでいて、ここから先の話は希海もよく知るところである。
+　昼食を抜いて事業所内を端から端まで探し、まさか思って位置情報を検索してみて今度は我が目を疑った。ハルカの位置情報デバイスが動作しているのだ。モニタ上のカーソルが指し示す住所は真浜区真揺洞漸新台二丁目。事業所から直線距離にして６キロほど離れた場所である。
+　東は情報端末を片手に大慌てで車を出した。停止したＦＩＡＮＣの自発的再起動。聞いたことがないわけではなかったが、東とて数本の論文に引用されているのを見たことがある程度で、今の今まですっかり頭から抜けていた。実際に自分が出くわさなければ二度と思い出すこともなかっただろう。それくらい例外的な現象だ。
+　東がＧＰＳの位置情報を頼りにたどり着いたのは三階建てのボロアパートだった。端末が指し示すハルカの場所は建物の一番東の部屋。下から順にチャイムを鳴らしていくと、一階は無人、二階には四十代の中年男性、三階には内気なくせに負けん気だけは人一倍強そうな女子大生が住んでいて、ここから先の話は希海もよく知るところである。
 </div>
 
     <div id="footer" v-component="hpot-page-footer"></div>
