--- a/hardproblem/1-07.html
+++ b/hardproblem/1-07.html
@@ -14,8 +14,8 @@
 
   <div class="contents">
 <div class="text">
-　深夜の中央環状線。シルバーの軽自動車は時速75kmを出していた。片道3車線のこの区間は制限速度が時速60kmなので、軽自動車の速度は別段速いとも遅いとも言えない。時たま、制限時速以下でのろのろと運転する車を抜かしたり、走り屋みたいにかっ飛ばすタクシーに抜かれたりする以外は、概ね周囲の車と歩調を合わせた運転を行なっている。
-　その車の後部座席に座り、希海はぼんやりと窓の外を眺めていた。中央分離帯に建てられた街灯が時速75kmで車窓を横切っていく。周期性を伴って目の前を駆け抜けるナトリウムランプのオレンジ色はさながら催眠術か何かのようで、じっと見つめていると何も考えられなくなってくる気がした。
+　深夜の中央環状線。シルバーの軽自動車は時速７５ｋｍを出していた。片道三車線のこの区間は制限速度が時速６０ｋｍなので、軽自動車の速度は別段速いとも遅いとも言えない。時たま、制限時速以下でのろのろと運転する車を抜かしたり、走り屋みたいにかっ飛ばすタクシーに抜かれたりする以外は、概ね周囲の車と歩調を合わせた運転を行なっている。
+　その車の後部座席に座り、希海はぼんやりと窓の外を眺めていた。中央分離帯に建てられた街灯が時速７５ｋｍで車窓を横切っていく。周期性を伴って目の前を駆け抜けるナトリウムランプのオレンジ色はさながら催眠術か何かのようで、じっと見つめていると何も考えられなくなってくる気がした。
 　ちらりと横をのぞき見る。同じく後部座席に座ったロボットの女の子も、流れ行く景色をじっと見つめていた。その表情は車内の暗がりでよく分からない。
 （今からこの子と共同生活か）
 　こうして横顔を<ruby>窺<rp>《</rp><rt>うかが</rt><rp>》</rp></ruby>ってみても正直実感が湧かなかった。
@@ -45,7 +45,7 @@
 「疲れただろう。マニュアルなんかの必要書類は後日送付するから、今晩はゆっくり休むといい。分からないことがあれば彼女自身に聞くか、不安なら私に電話してくれ」
 　そう言って東は、ふところから金属製の薄っぺらいケースを取り出し、中に入っていたカードを希海に手渡した。
 　名刺だった。
-　日中英の3ヶ国語で書かれているのは、交友関係の広さの表れだろうか。この男と話していると忘れてしまうが、おそらく、かなり偉い人なのだろう。他人から名刺をもらったことのない希海は、手中の紙切れをどう扱えばいいかわからず一抹のやりにくさを感じた。確か、もらった名刺をいきなりポケットとかに入れるのはマナー違反だったはずである。
+　日中英の三ヶ国語で書かれているのは、交友関係の広さの表れだろうか。この男と話していると忘れてしまうが、おそらく、かなり偉い人なのだろう。他人から名刺をもらったことのない希海は、手中の紙切れをどう扱えばいいかわからず一抹のやりにくさを感じた。確か、もらった名刺をいきなりポケットとかに入れるのはマナー違反だったはずである。
 　希海は数秒ほど悩んだ末、左手に名刺を持ったままドアを開いて外に出た。地面に足を付けて立ち上がるとそれまでの眠気が一気に引いていく。
 「それじゃあ、彼女をよろしくな」
 　男は運転席からそう告げると、車をUターンさせてさっさと行ってしまった。テールランプの赤色が次第に小さくなっていく。車が角を曲がって見えなくなっても、希海はその場に立ち尽くしていた。
@@ -54,10 +54,10 @@
 「はいっ」
 　非日常は、まだ続いていた。
 
-　2階分の階段を登って、東に数メートルも歩けば希海の部屋だ。
+　二階分の階段を登って、東に数メートルも歩けば希海の部屋だ。
 「ええっと……ああもう暗くて鍵穴がよく見えない」
 　カチャカチャと手探りで鍵穴を探しだして扉を開く。当然ながらその先の部屋も明かりがついておらず、扉の先には深い闇が広がっていた。
-「遠慮せず上がってよ、って今日2回目かなこのセリフ」
+「遠慮せず上がってよ、って今日二回目かなこのセリフ」
 　電気を付けると闇が霧散し、本やらゲームやらの散乱する部屋が姿を表した。当たり前だが家を出たときと何も変わっていない。出掛けている間に超常的な何かが起こって部屋が片付いていたら良いなと思ったが、そんなことは当然あるはずがなかった。
 「……ここで一つ大切なことを聞きたいんだけど」
 「なんですか？」
@@ -66,7 +66,7 @@
 「はいっ。ちゃんと毎日寝ますよ。人間と同じです」
 　そして、その可能性も完膚なきまでに打ち砕かれてしまった。これで晴れて今晩は床決定である。女の子はそんな希海の絶望などつゆとも知らず、自信満々に
 「私、こう見えて結構よくできているんですよ。なんでも、毎晩寝ている最中に頭の中のデータを整理してるらしいんです」
-　ああ、つまりデフラグね。<ruby>FIANC<rp>《</rp><rt>ファイアンク</rt><rp>》</rp></ruby>とかいうこの子のプロセッサが本当にデフラグをしているのかどうかは知らないが、きっと似たような処理が行われているんだろうなと希海は思う。どうせならこの部屋に散らばった漫画本やゲームを<ruby>整理<rp>《</rp><rt>デフラグ</rt><rp>》</rp></ruby>してほしかった。
+　ああ、つまりデフラグね。<ruby>ＦＩＡＮＣ<rp>《</rp><rt>ファイアンク</rt><rp>》</rp></ruby>とかいうこの子のプロセッサが本当にデフラグをしているのかどうかは知らないが、きっと似たような処理が行われているんだろうなと希海は思う。どうせならこの部屋に散らばった漫画本やゲームを<ruby>整理<rp>《</rp><rt>デフラグ</rt><rp>》</rp></ruby>してほしかった。
 「はぁ、じゃあ今日はあんたがベッドに寝て。私は……そうね、あっちで寝ることにするから。よいしょっと」
 　部屋の隅でホコリを被っていた冬用の布団を抱え上げ玄関へと運ぶ。人一人が寝っ転がれるスペースはもはや玄関しかなかった。
 「えっ……」
@@ -78,14 +78,14 @@
 「ご、ごめんなさい……」
 　希海に注意されて肩をすくめる女の子は、なおも小声で抗議を続けた。前髪越しの上目遣いが申し訳なさそうに希海を見上げる。
 「や、やっぱりダメですよ……。希海さんは私のオーナーなんですから。ご主人様を床に寝かせて自分だけベッドで寝るなんて私できません……」
-　この子の言うことは分からないでもない。人に尽くすべく生まれてきたロボットにとって、人より良い待遇を受けることは、自身のアイデンティティにも関わる問題なのだろう。だが希海にだって言い分はある。少なくとも見た目は5つ以上も幼いこの子を床に寝かせて、自分だけベッドで鼻ちょうちんを膨らませるのは絵的にどうなのか。それに、
+　この子の言うことは分からないでもない。人に尽くすべく生まれてきたロボットにとって、人より良い待遇を受けることは、自身のアイデンティティにも関わる問題なのだろう。だが希海にだって言い分はある。少なくとも見た目は五つ以上も幼いこの子を床に寝かせて、自分だけベッドで鼻ちょうちんを膨らませるのは絵的にどうなのか。それに、
 「私は自分が主人だなんてこれっぽっちも思ってないから」
 「えっ……」
 　女の子の表情がみるみると曇っていく。
 「あ、ご、ごめん。別にあんたのことが嫌いとか、そういう意味じゃなくてね。もちろん、これから上手くやっていきたいと思ってるんだけど、主人だとか<ruby>下僕<rp>《</rp><rt>しもべ</rt><rp>》</rp></ruby>だとか、そういうのどうも好きになれなくてさ。できるなら対等な関係でいたいって、そう考えてるわけ」
 　言いながら、また格好つけてるなと希海は思った。セリフだけなら、人もロボットも分け隔てなく扱う聖人君子のように聞こえるが、その実、希海の中にあるのは“怯え”だ。
 　希海は自分のことが好きではない。
-　ここ数年、自分に対する嫌悪感と矮小感を持たなかった日など1日たりとも存在しなかった。どうして自分はいつもこうなのだろう。また今日も学校へ行けなかった。両親は、小学校のころの友達は、高校の頃の友達は、こんな自分を見たらどう思うんだろう。一体、自分はこれからどうなってしまうのだろう。
+　ここ数年、自分に対する嫌悪感と矮小感を持たなかった日など一日たりとも存在しなかった。どうして自分はいつもこうなのだろう。また今日も学校へ行けなかった。両親は、小学校のころの友達は、高校の頃の友達は、こんな自分を見たらどう思うんだろう。一体、自分はこれからどうなってしまうのだろう。
 　朝起きてネットをしたりゲームをしたりしている最中は忘れていられるのだが、夜、布団に入って目を瞑ると途端にそれらが牙を剥いて襲ってくる。そんな自分がこの子に主人と呼ばれて慕われるのだ。希海の憧れる機械であるこの子に、だ。
 　耐えられる気がしなかった。
 　もちろん、最初はうまくいくだろう。ご主人様ともてはやされ、その気になっていれば、さぞ気持ちがいいはずだ。だがいずれ間違いなくボロが出る。ふとしたきっかけに変な言葉を言ってしまうかもしれない。何気なく交わした約束を面倒くささから反故にしてしまうかもしれない。虫の居所が悪くて、何も悪くないこの子に当たり散らしてしまうかもしれない。
@@ -102,9 +102,8 @@
 「いや、だからさ」
 「まだ寒い日もあるんですから、床なんかで寝たら風邪引いちゃいますよ。友達だったらなおさら放おっておけません」
 　こいつ意外と頑固だな、と希海は思う。ロボットだから柔軟な思考ができないのか、従者としての立場がそうさせるのか、はたまたこの子が特別そういう性格なのかはわからない。
-「大丈夫だって。1日くらい大したことないわよ。大体、ベッドがひとつしかないんだからどっちかが床で寝なきゃいけないでしょ」
-　そう。<ruby>ベッド<rp>《</rp><rt>リソース</rt><rp>》</rp></ruby>が<ruby>ひとつ<rp>《</rp><rt>有限</rt><rp>》</rp></ruby>である以上、絶対にどちらかが不利益を被らなければならないのは明白なのだ。だが女の子はそんな理屈など
-<ruby>端<rp>《</rp><rt>はな</rt><rp>》</rp></ruby>から知らぬと言った様子で力強くこう言った。
+「大丈夫だって。一日くらい大したことないわよ。大体、ベッドがひとつしかないんだからどっちかが床で寝なきゃいけないでしょ」
+　そう。<ruby>ベッド<rp>《</rp><rt>リソース</rt><rp>》</rp></ruby>が<ruby>ひとつ<rp>《</rp><rt>有限</rt><rp>》</rp></ruby>である以上、絶対にどちらかが不利益を被らなければならないのは明白なのだ。だが女の子はそんな理屈など<ruby>端<rp>《</rp><rt>はな</rt><rp>》</rp></ruby>から知らぬと言った様子で力強くこう言った。
 「ふたりでベッドを使いましょう」
 　希海は固まった。
 「…………」
@@ -112,8 +111,8 @@
 「狭いでしょ」
 「床で寝るよりマシです」
 「私、寝相悪いから」
-「今日1日くらいなら我慢します」
-「そういえばここ1週間、お風呂入ってなかったなあ」
+「今日一日くらいなら我慢します」
+「そういえばここ一週間、お風呂入ってなかったなあ」
 「大丈夫です。私の鼻は鈍感ですから」
 　希海は大きくため息をつくと、ついに観念した。
 「しゃあないわねえ、分かったわよ。一緒に寝ればいいんでしょ。一緒に寝れば」
@@ -124,13 +123,13 @@
 　そうと決まると早速就寝である。
 　寝間着を持っていなかった女の子には、希海の高校の頃のジャージを貸してやることになった。
 「……やっぱサイズ合わないか」
-　真っ赤なジャージを着た女の子が洗面所から出てくる。希海との身長差は10cmほど。袖や丈がちょっとばかり余ってしまっていた。
+　真っ赤なジャージを着た女の子が洗面所から出てくる。希海との身長差は１０センチほど。袖や丈がちょっとばかり余ってしまっていた。
 「こりゃ服も買わないと。部屋の片付けに買い物に……明日は盛りだくさんね」
 「す、すいません」
 　女の子が申し訳なさそうにうつむく。消防車かと見紛うほどの目もくらむ赤色のジャージ。背中には、黄色の樹脂ででかでかと校名がプリントされていた。いつ見てもひどいデザインだと希海は思う。
 「あんたが謝ることないって。ほら、さっさと布団に入る」
 　ベッドを指さして女の子を<ruby>急<rp>《</rp><rt>せ</rt><rp>》</rp></ruby>かした。
-　彼女を先に行かせたのは、自分が壁から遠い方で寝るためである。1週間も風呂に入っていないのはさすがに嘘だが、希海の寝相が悪いのは本当だ。寝ている最中に女の子を床に突き落としてしまったら目も当てられない。
+　彼女を先に行かせたのは、自分が壁から遠い方で寝るためである。一週間も風呂に入っていないのはさすがに嘘だが、希海の寝相が悪いのは本当だ。寝ている最中に女の子を床に突き落としてしまったら目も当てられない。
 　女の子がそろそろと布団に入り、希海もそれに続く。やはり少しばかり狭いが今更気にしてもいられない。
 「じゃあ、電気消すよ」
 「はい」
@@ -173,7 +172,7 @@
 「……に、にゅーらるぷろせっさーとか」
 「へいき。こう見えて私、理系なんだから」
 　蛇口からしたたる水滴のように、頭に思い浮かんだ返答がそのまま口からこぼれ落ちていく。眠気のせいだろう。いつになく大きく出たと希海は思う。三角関数や微積分はともかく、情報科学なんてさわりの部分を一般教養でちょっとかじった程度。門外漢もいいところだ。
-（まあいいや。教科書の1冊や2冊めくれば分かるでしょ）
+（まあいいや。教科書の一冊や二冊めくれば分かるでしょ）
 　そんな簡単に学問が身につけば誰も苦労などしないのだが、そんな事実すら今はどうでもよかった。これもたぶん眠気のせい。
 「納得した？」
 「はいっ。でも約束ですからね。ちゃんと教えて下さいね」
