誤表記の修正

--- a/hardproblem/5-06.html
+++ b/hardproblem/5-06.html
@@ -39,7 +39,7 @@
 
 「でも、違ったんです……。それは私の一方的な思い違いで……。あの人は、真也さんは……日を追うごとにどんどん追い詰められていって……」
 　坂道の途中で、リコが立ち止まった。
-　動悸を必死で抑えるように胸元で強く手を握りしめ、肩を震わせながら言葉を紡ぐ少女。その背後には今まで歩いてきた長い真っ直ぐな坂道と、その向こうに広がる冬の冷たい海が広がっている。
+　動悸を必死で抑えるように胸元で強く手を握りしめ、肩を震わせながら言葉を紡ぐ少女。その背後には今まで歩いてきた長い真っ直ぐな坂道と、その向こうに広がる冬の冷たい海。
 「それで……ある日の晩、とてもつらそうな顔で帰ってきたあの人に……」
 　苦しみに歪んた少女の顔と絞り出すような声色。リコのその苦しみが、希海には自分のことのように感じられた。なぜなら希海はその凄惨な結末を知っているから。昔語りの終着地がハッピーエンドなどではないことを知っているから。
 「それで翌朝……。翌朝、私が起きたときには既にあの人は……あの人は……」
