表記ゆれの修正

--- a/hardproblem/2-01.html
+++ b/hardproblem/2-01.html
@@ -33,20 +33,20 @@
 「うん。でも毎度ながら悪いわね。私一人でパクパク食べちゃって」
 　机に並んだ食事は希海ひとりの分だけ。その理由はロボットであるリコには食事を摂る必要がないからだ。彼女のエネルギー源は電力そのものである。月に一度キャパシタを充電してやればあとは水だけで生きていける。
 「大丈夫ですよ。それにこの間、晩ご飯食べちゃいましたし」
-　だが電力をエネルギー源としているということは、彼女が食事を摂れないということを意味しているわけではない。食物からエネルギーを得ていないというだけで、リコも一応は物を食べることができるし、大雑把ながら味覚も実装されている。ただ、消化系の実現には困難が多く、現状、食べたものは体内のダストパンで防腐液に沈めておくしかないのだ。このダストパンは月一のメンテナンス時に清掃されるのだが、それまではずっと食べたものが体の中に残ったままである。よって容積の関係上、リコは月に3回程度しか食事を摂ることができない。
+　だが電力をエネルギー源としているということは、彼女が食事を摂れないということを意味しているわけではない。食物からエネルギーを得ていないというだけで、リコも一応は物を食べることができるし、大雑把ながら味覚も実装されている。ただ、消化系の実現には困難が多く、現状、食べたものは体内のダストパンで防腐液に沈めておくしかないのだ。このダストパンは月一のメンテナンス時に清掃されるのだが、それまではずっと食べたものが体の中に残ったままである。よって容積の関係上、リコは月に三回程度しか食事を摂ることができない。
 　しかし当のリコはそんな設計者の思惑などどこ吹く風いった感じで、トーストをかじる希海の姿を嬉しそうに眺めてはにこにこと微笑んでいた。
 （食べにくい……）
 　希海は、物を食べているところを人に見られるのが苦手だ。別段行儀の悪い食べ方をしているわけではないのだが、誰かから見られていると『食べ物を口に入れて咀嚼し、飲み込む』という過程が物凄く汚らしいことであるかのような気がしてしまう。何せ、自分の体内に異物を入れているのだ。出すか入れるかの違いはあるものの、排泄やセックスの現場を見られているのとある意味で同じではないのかとすら思う。
 　リコの視線に耐え切れず、希海は床においてあったテレビのリモコンに手を伸ばした。ボタンを押すと少し遅れて液晶に火が灯り、画面に朝のワイドショーが映し出される。
-　――なるほど。では柿木選手の考える理想のプレーとはどのようなものですか？
+『なるほど。では柿木選手の考える理想のプレーとはどのようなものですか？』
 　どうやら人気スポーツ選手の特集が組まれているようだった。スポーツ観戦に興味がない希海でさえ、見たことのある顔だ。たしか、この間の国際試合で活躍したとか何とか。
-　――そうですね。これまでの僕のサッカー人生は、行き詰まりの連続でした。怪我をしたり、思うような結果が残せなかったり。とにかく、色々な辛いことがありましたけど、それでも僕は『頑張ろう』『自分ならやれる』とどんなときでも前向きに努力を続けてきました。やっぱり努力って人間にとって一番大切なものだと思うんですよ。運がなくても才能がなくても、努力だけは誰だってできますからね。僕はプレーを通じてそういうことの大切さを　
+『そうですね。これまでの僕のサッカー人生は、行き詰まりの連続でした。怪我をしたり、思うような結果が残せなかったり。とにかく、色々な辛いことがありましたけど、それでも僕は頑張ろ、自分ならやれる、とどんなときでも前向きに努力を続けてきました。やっぱり努力って人間にとって一番大切なものだと思うんですよ。運がなくても才能がなくても、努力だけは誰だってできますからね。僕はプレーを通じてそういうことの大切さを――
 　チャンネルを変えた。
 「あっ、変えちゃダメですよ。私ちょっと興味あるんですから」
 「ごめん私ああいうの無理、生理的に無理」
 　希海はリモコンを片手にせわしなくチャンネルを回していく。だが民放はどこも下世話な芸能ニュースばかりで中々チャンネルが定まらない。
 「ああもう、これでいいや」
-　結局、<ruby>国営放送<rp>《</rp><rt>J　C　T　V</rt><rp>》</rp></ruby>にチャンネルを固定した。地味な芸能人が地味な観光地を歩いて回るだけの、毒にも薬にもならないような旅番組。
+　結局、<ruby>国営放送<rp>《</rp><rt>Ｊ　Ｃ　Ｔ　Ｖ</rt><rp>》</rp></ruby>にチャンネルを固定した。地味な芸能人が地味な観光地を歩いて回るだけの、毒にも薬にもならないような旅番組。
 「はぁ〜。地上波はホント下らないわねえ。衛星放送とかに加入してればこういうときに便利なんだろうなあ」
 「入らないんですか？　衛星放送」
 「アパート自体が加入してないからなあ……。管理人さんに頼むのも何だか気が引けるし」
