--- a/hardproblem/2-02.html
+++ b/hardproblem/2-02.html
@@ -16,7 +16,7 @@
 <div class="text">
 　ベッドタウンとしての色彩が強い<ruby>真揺<rp>《</rp><rt>まゆらぎ</rt><rp>》</rp></ruby>ニュータウンにあって、昼間でも人通りが絶えない繁華な場所が存在する。
 　地区センター。
-　いわゆる駅前である。真揺ニュータウンには北・中央・南の3ヶ所に地区センターが存在し、それぞれが各地区の商業・交通の拠点となっている。中でも真揺中心駅の周囲に広がる中央地区センターはとりわけ規模が大きく、駅周辺にはショッピングモールや百貨店・オフィスなどが集積している。
+　いわゆる駅前である。真揺ニュータウンには北・中央・南の三ヶ所に地区センターが存在し、それぞれが各地区の商業・交通の拠点となっている。中でも真揺中心駅の周囲に広がる中央地区センターはとりわけ規模が大きく、駅周辺にはショッピングモールや百貨店・オフィスなどが集積している。
 　そして、その中央地区センターの一角。<ruby>地鉄<rp>《</rp><rt>メトロ</rt><rp>》</rp></ruby>の改札を出て階段を登ったすぐのところにあるガラス張りの小洒落た店舗の前にふたりは立っていた。
 「…………」
 　行き交う人々の往来を背に、リコはガラスの向こう側を物珍しそうに眺めている。
@@ -41,10 +41,10 @@
 「でも希海さん、あそこに通うつもりで、ここまで来たんじゃないんですか？」
 　料理教室を見に来たなんて言っただろうか。世間一般の常識には疎いくせして、リコはこういう勘だけやたらと鋭い。
 「違うって。ほら、ああいうところって結構お金かかるしね。安かったら行ってもいいかなって思うけど、あの様子じゃ結構いい値段するわよ」
-　リコの追求を適当にかわしながら階段を登る。踊り場を折り返して最後の一段を乗り越えると視界が開けた。ショッピングセンターの2階部分に設けられた屋外広場である。駆けっこはおろか、ところどころに置かれたベンチやオブジェを取り除けばフットサルすら余裕でできそうなくらいのスペース。西日本時代に作られた築数十年の施設とはいえ、このような贅沢な空間のとり方はそれ以降の建築に通じるものがあった。
+　リコの追求を適当にかわしながら階段を登る。踊り場を折り返して最後の一段を乗り越えると視界が開けた。ショッピングセンターの二階部分に設けられた屋外広場である。駆けっこはおろか、ところどころに置かれたベンチやオブジェを取り除けばフットサルすら余裕でできそうなくらいのスペース。西日本時代に作られた築数十年の施設とはいえ、このような贅沢な空間のとり方はそれ以降の建築に通じるものがあった。
 「今日もいい天気ですね」
 　空を見上げて嬉しそうにリコが言った。
-　その言葉につられて希海も上空に視線を移してみる。どこまでも続いているかのような真っ青な空に、真新しい飛行機雲が帯を引いていた。6月も末となれば空の表情はすっかり夏のそれだ。最近できた家電量販店の向こうでは、山のような大きさにまで成長した積乱雲がこちらをのぞき込んでいる。
+　その言葉につられて希海も上空に視線を移してみる。どこまでも続いているかのような真っ青な空に、真新しい飛行機雲が帯を引いていた。六月も末となれば空の表情はすっかり夏のそれだ。最近できた家電量販店の向こうでは、山のような大きさにまで成長した積乱雲がこちらをのぞき込んでいる。
 「ああー嫌だなあ。もうすぐ夏かあ」
 「希海さんは夏、嫌いですか？」
 「嫌い。暑いし汗かくし<ruby>目眩<rp>《</rp><rt>めまい</rt><rp>》</rp></ruby>はするし頭は痛くなるし、もう最悪。私は冬の方が好きかな」
@@ -61,7 +61,7 @@
 「あ、そういやあんた欲しい本とかある？」
 「私ですか？」
 「部屋の本なんて読んでも面白くないでしょ？　私は自分の目当てのもの探してるからさ。その間に色々見てきなよ」
-　希海がゲームやネットをしている最中にちらりと横を窺ってみると、そこにはいつでも本を開いて眉間に皺を寄せているリコの姿があった。無理もない。希海が所有している本はそのほとんどが新書か青年向けのコミックである。想定年齢15歳の女の子が読むにはいささか酷だろう。それに希海は普段からリコそっちのけでゲームをしているのだ。本くらい彼女が読みたい物を読ませてやらないと後ろめたさでプレイに集中できない。
+　希海がゲームやネットをしている最中にちらりと横を窺ってみると、そこにはいつでも本を開いて眉間に皺を寄せているリコの姿があった。無理もない。希海が所有している本はそのほとんどが新書か青年向けのコミックである。想定年齢十五歳の女の子が読むにはいささか酷だろう。それに希海は普段からリコそっちのけでゲームをしているのだ。本くらい彼女が読みたい物を読ませてやらないと後ろめたさでプレイに集中できない。
 「いいんですか？」
 「いいっていいって。あんたはそんなこと気にしないの」
 「ありがとうございます！　一生大切にしますね！」
@@ -70,7 +70,7 @@
 「じゃ、私の探してるのはたぶんこっちだから。気に入った本があれば、適当に私のところまで持って来て。あ、それと私と落ち合うまでは勝手に本屋の外へ出ないこと。迷子になったら困るからね」
 　リコと別れ、フロアを適当に歩いていると探し物はすぐに見つかった。希海はさっさと会計を済ませると、リコを探して再びフロアをうろつき回る。
 　整然と立ち並ぶ壁のような本棚とそこに鎮座する多種多様な本たち。ある者は人目を引くタイトルと装丁で自らの存在を声高に主張し、またある者は同じ姿形をした仲間と共に群れの力を誇示している。まるで熱帯雨林のような本の樹海。そのさなかにぽつんと一人の女の子が立っていた。
-　本棚の谷間に立ち尽くし、紙の中に広がる世界を必至に目で追うリコ。その手に持たれた本は普通の本より少し大きめであり、遠目に見てA5サイズといったところだろうか。
+　本棚の谷間に立ち尽くし、紙の中に広がる世界を必至に目で追うリコ。その手に持たれた本は普通の本より少し大きめであり、遠目に見てＡ５サイズといったところだろうか。
 　何を読んでいるのだろう、と希海は思った。活字にしてはページをめくるのが速すぎるし、漫画にしては遅すぎる。足音を殺して忍び寄ってみると、自分でも驚くほど簡単に背後まで歩を進めることができた。希海の存在に気づいていないリコは、無防備な背中を晒して手元の本に食い入ったままだ。しばし呼吸をやめ、背伸びをして本の内容を覗いてみる。
 　小さく呼吸を繰り返す細い肩とその向こう側の紙面。光沢紙が天井の蛍光灯を映し込むその先には、一面の青い世界が広がっている。いや、正確に言うと一面ではない。ページの上部にはちぎれた<ruby>綿毛<rp>《</rp><rt>わたげ</rt><rp>》</rp></ruby>のような白い雲がいくつも見えるし、下部には真っ白な砂浜も描かれている。これは……。
 「写真集？」
@@ -94,14 +94,14 @@
 「あ……ご、ごめん。ちょっと写真に見入っちゃって」
 　リコに悟られないように、希海は小さく安堵の溜息を付いた。どうやら昔の記憶などではなく、単に『夏はノスタルジックな季節だ』というよくある話がしたかったらしい。あまりに唐突すぎて分からなかった。
 「もうっ、ひどいですよ。希海さんがちゃんとした言葉で話せっていうからそうしたのに」
-　リコはそう言ってぷい、と拗ねたような表情を見せた。出会ってから早1ヶ月以上。希海との生活にも段々と慣れてきたのか、最近はリコのこういう表情を見かけることも多くなった。
+　リコはそう言ってぷい、と拗ねたような表情を見せた。出会ってから早一ヶ月以上。希海との生活にも段々と慣れてきたのか、最近はリコのこういう表情を見かけることも多くなった。
 「何ならもう一回最初から話してくれてもいいわよ。テンポとかページめくる動作とかちゃんと再現してよね」
 「嫌ですよーだ。もう頼まれたってやりません」
 「まあまあそう言わずに。はい巻戻し」
 「そんな機能ありませんからっ！」
 　慣れてきたのはリコの方だけでない。最初の1週間ほどは気まずさを覚えることも多々あったが、今やこうして冗談を言い合えるくらい、希海の中でリコの存在が自然なものになっている。
 　本の樹海にふたり分の笑い声が小さく響いた。
-　一人ぼっちの六畳一間で1年を過ごしてきた希海にとって、リコは数年ぶりにできた友達だ。沈黙を気にしなくてもいい相手。考えながら会話をする必要もない相手。希海には、それがたまらなく嬉しかった。
+　一人ぼっちの六畳一間で一年を過ごしてきた希海にとって、リコは数年ぶりにできた友達だ。沈黙を気にしなくてもいい相手。考えながら会話をする必要もない相手。希海には、それがたまらなく嬉しかった。
 「そうだ、じゃあお詫びにさ……行ってみない？」
 「へっ？　どこへですか」
 「海」
@@ -146,16 +146,16 @@
 「あっ！　そうだ私も」
 　希海の様子をじっと見ていたリコが不意に声を上げた。机の上に置いた本屋のビニール袋を手に取り、がさごそと中身を取り出す。
 「えへへー。さっそく書きますよっ」
-　リコの両手には小さな日記帳があった。子供向けアニメのキャラクターのあしらわれたそれは、どう見ても小学生向けのものである。15歳にしてはいささか幼い代物だが、無邪気な笑顔を浮かべる今のリコにはとてもよく似合っていた。
+　リコの両手には小さな日記帳があった。子供向けアニメのキャラクターのあしらわれたそれは、どう見ても小学生向けのものである。十五歳にしてはいささか幼い代物だが、無邪気な笑顔を浮かべる今のリコにはとてもよく似合っていた。
 「あっ、何か書くものあります？」
 「シャーペンでいい？」
-　希海からシャープペンシルを受け取ると、リコは机の前に座って日記帳を広げた。かつてはラップトップ1台がぎりぎり置けるくらいの散らかりようだったこの机も、リコが片付けてくれたお陰で随分とスペースにゆとりができた。床に散らばっていた本の<ruby>類<rp>《</rp><rt>たぐい</rt><rp>》</rp></ruby>だって今は綺麗に本棚に収められている。
+　希海からシャープペンシルを受け取ると、リコは机の前に座って日記帳を広げた。かつてはラップトップ一台がぎりぎり置けるくらいの散らかりようだったこの机も、リコが片付けてくれたお陰で随分とスペースにゆとりができた。床に散らばっていた本の<ruby>類<rp>《</rp><rt>たぐい</rt><rp>》</rp></ruby>だって今は綺麗に本棚に収められている。
 （何だかんだ言ってちゃんと仕事やってるなあ）
 　希海は、以前よりもずっときれいになった自室と手元のレシピ本を交互に眺めた。料理のレパートリーがちょっと少ないとは言え、掃除も洗濯もこの子は立派にこなしている。
 （私もちゃんとしないと……）
-　秋。やがて訪れるその季節のことを考えると、不安で思わず叫びだしそうになる。あと3ヶ月。いや、まだ3ヶ月もあるのだ。そんな遠い未来のことを考えてどうなるというのか。そんなものに思いを馳せてみたところで精神の平穏を崩すだけで得るものなど一つもない。
+　秋。やがて訪れるその季節のことを考えると、不安で思わず叫びだしそうになる。あと三ヶ月。いや、まだ三ヶ月もあるのだ。そんな遠い未来のことを考えてどうなるというのか。そんなものに思いを馳せてみたところで精神の平穏を崩すだけで得るものなど一つもない。
 （……楽しみだな、海）
-　希海は無理矢理に考えを停止させた。典型的な先送りである。明日やるとか、来週やるとか、そんなことを言っているうちは、いつまでたっても出来っこないのに。そもそも、そんな『明日やる』を積み重ねた結果がこの1年ではなかったのか。未来のことを考えるのが無意味だと言うのなら、今すぐにでも大学へ行けばいい。
+　希海は無理矢理に考えを停止させた。典型的な先送りである。明日やるとか、来週やるとか、そんなことを言っているうちは、いつまでたっても出来っこないのに。そもそも、そんな『明日やる』を積み重ねた結果がこの一年ではなかったのか。未来のことを考えるのが無意味だと言うのなら、今すぐにでも大学へ行けばいい。
 　だがそんなことは希海にも分かっている。分かっているからこそ見ないふりをするのだ。駄目な自分と変われない自分。その二つと真正面から対峙する強さなど、希海は持ち合わせていなかった。
 　かりかり、かりかり…………かりかりかり。
 　少し前から途切れがちに響いている小さな音。机に向かったリコが必死にペンを動かす音だ。
