--- a/hardproblem/2-03.html
+++ b/hardproblem/2-03.html
@@ -14,7 +14,7 @@
 
   <div class="contents">
 <div class="text">
-　その日はあっという間に訪れた。最初の5日で行く場所を決め、次の5日で段取りを組んだ。その次の5日で買い物を終えると、最後の1日は心を踊らせて待つだけだった。
+　その日はあっという間に訪れた。最初の五日で行く場所を決め、次の五日で段取りを組んだ。その次の五日で買い物を終えると、最後の一日は心を踊らせて待つだけだった。
 「わぁ！　見てください希海さん！　海ですよ海！」
 　<ruby>特急列車<rp>《</rp><rt>インターシティ</rt><rp>》</rp></ruby>がトンネルを抜け、太陽の光がボックスシートに差し込む。もうさっきから窓ガラスに張り付いたままの少女が、眼前の光景に目を輝かせた。電車が<ruby>海名<rp>《</rp><rt>かいめい</rt><rp>》</rp></ruby>駅でスイッチバックをしてからというものの、リコはずっとこの調子である。海が現れるたびに窓へ張り付いては、キャッキャと楽しそうに騒ぎ出す。
 「あんた、さっきから何回それ言ってるのよ」
@@ -29,11 +29,11 @@
 「はいっ。天気予報が曇りだったから、ちょっと心配してました」
 　いや、ちょっとどころではなかったはずだ。テレビの画面を埋め尽くす雲や傘のマークと、今にも泣き出さんばかりのリコの顔。一時は日程の変更も考えたが、変更した先の日が晴れである保証もなく、どうせ毎日休みなのだから、トライ・アンド・エラーで雨が止んだ日に出掛けようと思っていた。
 「ほら、アレが効いたのよ。あんたが必死で作ってたやつ」
-　アレとはリコ特製のてるてる坊主たちのことだ。結局、いつの時代も最後は神頼みである。予報を知った日から毎晩1体、作っては吊るし、作っては吊るし……。窓の外に並んだてるてる坊主は、今朝の時点で7体に及んでいた。
+　アレとはリコ特製のてるてる坊主たちのことだ。結局、いつの時代も最後は神頼みである。予報を知った日から毎晩一体、作っては吊るし、作っては吊るし……。窓の外に並んだてるてる坊主は、今朝の時点で七体に及んでいた。
 「ふふっ、そうかも知れませんね。でも希海さんの――」
 　不意にスピーカーから電子音が鳴り響く。和音のない、簡素で古臭いメーデー歌。鉄道省特有の到着予告チャイムである。
 『本日も、共和国鉄道をご利用いただきましてありがとうございます。まもなく<ruby>浜木<rp>《</rp><rt>まはぎ</rt><rp>》</rp></ruby>、<ruby>浜木<rp>《</rp><rt>まはぎ</rt><rp>》</rp></ruby>です』
-　聞き取りやすい滑らかな女性の声。10年ほど前から一般的になった合成音声だ。
+　聞き取りやすい滑らかな女性の声。十年ほど前から一般的になった合成音声だ。
 「あ、そろそろみたいよ。荷物下ろそ？」
 　アナウンスを聞くやいなや、希海は背伸びをして網棚のショルダーバッグに両手を伸ばした。肩紐を引っ張ると重心の支えを失ったバッグが、希海の体にずしりとのしかかってくる。
 「うっ……またこの重いのを持って歩くのか」
@@ -59,7 +59,7 @@
 「も、もう！　脅かさないでくださいよ！！」
 　まったくこの子は、と希海は苦笑する。自分の体のことに関して何一つとして知らないリコが少しだけおかしかった。
 「あはは、ごめんごめん。じゃ、行こっか」
-　目指す海水浴場はここから4kmほど先である。駅前で客待ちをしていたタクシーに乗り込んで10分も車に揺られると、さびれた田舎の街並みが次第にリゾート地のそれに変貌していく。
+　目指す海水浴場はここから４キロほど先である。駅前で客待ちをしていたタクシーに乗り込んで十分も車に揺られると、さびれた田舎の街並みが次第にリゾート地のそれに変貌していく。
 「うわぁ！　だんだん人が増えてきましたね！」
 「……ああうん、そうね」
 「あっ！　あれってヤシの木ですか？」
@@ -86,7 +86,7 @@
 　嘘を付くときだけ急に饒舌になる自分が少し嫌だった。
 （まあでも……何かあってからじゃ遅いしね）
 　前回のメンテナンス時に東から聞いた話が脳裏をよぎる。
-　なんでもアンドロイドが凶悪犯罪に巻き込まれる確率は、通常の人間の約10倍にも上るらしい。その中でも一番多いのが誘拐であり、確か『大吉を引く程度に運が良ければ転売の末に新しい主人のもとで第二の人生を送ることになり、中吉や小吉なら改造を施された上でピンクネオンの床屋で春を売ることになる。そして凶ならスナッフビデオに出演させられ、生きたままパーツを剥ぎ取られることになる』……だとか。そう、何かあってからでは遅いのだ。
+　なんでもアンドロイドが凶悪犯罪に巻き込まれる確率は、通常の人間の約十倍にも上るらしい。その中でも一番多いのが誘拐であり、確か『大吉を引く程度に運が良ければ転売の末に新しい主人のもとで第二の人生を送ることになり、中吉や小吉なら改造を施された上でピンクネオンの床屋で春を売ることになる。そして凶ならスナッフビデオに出演させられ、生きたままパーツを剥ぎ取られることになる』……だとか。そう、何かあってからでは遅いのだ。
 　しばし車窓の景色を眺めていると、タクシーは目的の海水浴場に到着した。運賃の支払いを済ませてドアを開けると一層強い海の香りが漂ってくる。
 「それじゃあ、楽しんでいってくださいね」
 　運転手はそう言って車を発進させると細い路地に入り込み、元来た方向へと帰っていった。おそらく駅前で再び客を待つのだろう。エンジン音が行楽地の喧騒にかき消されていく。
