--- a/hardproblem/2-05.html
+++ b/hardproblem/2-05.html
@@ -35,7 +35,7 @@
 　自分が、その微笑みを向けられるだけの人間だとはとても思えない。この心優しい子にこれ以上期待されたくなかった。この笑顔をこれ以上裏切りたくなかった。
 「私さ、長い間…………大学に行ってないの」
 　だから希海は、自分の醜悪さをさらけ出すことにした。膝の上で指を強く組みしめては視線を逸らすように窓の外を眺め、ひとつひとつ絞るように言葉をひねり出していく。
-「最初は単に夜ふかしして朝起きれなかっただけ。でもそれが何日も続くとだんだんと行きづらくなって……。明日行こうとか、来週行こうとか思い続けてる間に、気づけば1年以上が過ぎてた」
+「最初は単に夜ふかしして朝起きれなかっただけ。でもそれが何日も続くとだんだんと行きづらくなって……。明日行こうとか、来週行こうとか思い続けてる間に、気づけば一年以上が過ぎてた」
 　一方のリコは何も言わずに、ただじっと吐き出される希海の言葉に耳を傾けている。瞳の中の虹が悲しそうに揺らめいていた。
 「単位が揃ってるとか、秋から行くだなんてみんな嘘っぱち。自分勝手に学校サボって遊びに行って、遊びに行った先で知り合いに出会って、自分勝手に落ち込んでるの」
 　秘めていた思いは、さながら毒のようなものだったのだろう。さらけ出してしまえば何てことはない。言葉を吐き捨てるほどに、体の中が軽くなっていくのを感じた。これでもう格好を付けなくて済む。よく見られたいとか、期待を裏切りたくないとか、そういう<ruby>諸々<rp>《</rp><rt>もろもろ</rt><rp>》</rp></ruby>の重荷を投げ捨ててしまえば、少し楽になれる気がした。
