--- a/hardproblem/2-06.html
+++ b/hardproblem/2-06.html
@@ -16,16 +16,16 @@
 <div class="text">
 　目が覚めると窓の外は真っ暗になっていた。
 　重い体に鞭打ってベッドから這い出ると、希海は手探りで電灯のリモコンを探した。なぜか机の上に置かれていたリモコンを手に取り、スイッチを入れる。電圧を印加されたダイオードからまばゆい光が放たれ、闇に閉ざされていた部屋がその姿を現した。
-　今、何時だろう。枕元に置かれた時計のセグメントは22時を示している。家に着いたのがたしか18時前。帰ってからすぐに寝てしまったので、4時間ほど寝ていた計算になる。
+　今、何時だろう。枕元に置かれた時計のセグメントは午後の十時を示している。家に着いたのがたしか六時前。帰ってからすぐに寝てしまったので、四時間ほど寝ていた計算になる。
 　そういえばリコの姿が見当たらない。いつもなら『あっ、起きました？』と早々に声を掛けてくるというのに。どこか買い物へ出掛けているのだろうか。そう思って、部屋を見渡してみるとさっきまでリモコンが置いてあった机の上に、小さなメモ書きを見つけた。
 
 『<span class="simplified">希海</span>さんへ。
 　<span class="simplified">北地区</span>センターへ<span class="simplified">买</span>いものに<span class="simplified">行</span>ってきます。
-　22<span class="simplified">时</span>ごろ<span class="simplified">戻</span>ります』
+　<span class="simplified">十时</span>ごろ<span class="simplified">戻</span>ります』
 
-　案の定買い物だったようだ。22時ごろに帰ると書いてあるので、もうそろそろ戻ってくる頃だろう。
+　案の定買い物だったようだ。十時ごろに帰ると書いてあるので、もうそろそろ戻ってくる頃だろう。
 「ん……？」
-　メモを置こうとして気付いた。机の上になぜか大学の教科書が置いてある。『<ruby>ラ イ リ ー 量 子 精 神 力 学 入 門<rp>《</rp><rt>Riley Introduction to Quantum Orgomechanics</rt><rp>》</rp></ruby>』。3回生の頃に買ったはいいが、ろくに読まず本棚の肥やしになっていたものだ。おかしいな、と希海は首をかしげた。こんなの最近読んだだろうか？
+　メモを置こうとして気付いた。机の上になぜか大学の教科書が置いてある。『<ruby>ラ イ リ ー 量 子 精 神 力 学 入 門<rp>《</rp><rt>Riley, Introduction to Quantum Orgomechanics</rt><rp>》</rp></ruby>』。三回生の頃に買ったはいいが、ろくに読まず本棚の肥やしになっていたものだ。おかしいな、と希海は首をかしげた。こんなの最近読んだだろうか？
 　ずっしりと重いハードカバーの教科書を手に取り、ぱらぱらとめくってみる。内容は相変わらず意味が分からなかった。ページを埋め尽くす難解な数式と、重量感のある<ruby>厳<rp>《</rp><rt>いかめ</rt><rp>》</rp></ruby>しい装丁。この手の教科書を開くとまるで魔導書でも読んでいるかのような気分になれる。もちろん、そこに記されているのは禁断の術式ではなく理論家による地道な考察を経て作られた数式であり、ところどころに記載されている図は魔法陣ならぬ反応過程を表すダイアグラムである。だが内容を理解していない希海にとって両者はまったく同じものと言っても過言ではない。
 　魔導書、もとい教科書を片手に持つと、希海はそのまま右手を突き出して呪文でも唱えるふりをしてみる。とは言ってもオカルトチックな呪文など知らないのでゲームに登場する攻撃魔法で代用するのだが。
 　がちゃり、と鍵の開く音。
@@ -52,7 +52,7 @@
 　リコが教科書の一文を指さして言った。フォーク？　一体何のことを言っているのだろう。皆目見当もつかない表現だ。疑問を抱えながら教科書を覗き込んだ希海は、「なるほどフォークか」と納得する。
 「ああ、これは<ruby><span class="times">Ψ</span><rp>《</rp><rt>プサイ</rt><rp>》</rp></ruby>っていうギリシャ文字よ。波動関数を表す記号」
 「このくるくるしてるのは？」
-「ハミルトニアン。系のエネルギーを表す演算子で、くるくるしてるのはHの花文字ね」
+「ハミルトニアン。系のエネルギーを表す演算子で、くるくるしてるのはＨの花文字ね」
 「この十字架は？」
 「十字架じゃなくて<ruby>短剣符<rp>《</rp><rt>ダガー</rt><rp>》</rp></ruby>。<ruby>転置複素<rp>《</rp><rt>エルミート</rt><rp>》</rp></ruby>共役って意味よ」
 「……ぜんぜんわかんないです」
@@ -70,32 +70,32 @@
 「ところであんた、数学はどれくらいできるの？」
 「あ……えっと、二次方程式は解けます」
 「なるほど、義務教育はきっちり終えているってことね」
-　はたしてこの本を読めるようになるまでには、どれくらいの時間が必要なのだろう。高校3年間と大学の初等教程。希海が5年間の歳月をかけて学んできたことを今から教えるのだ。教える分野を絞ったとしても、かなりの手間を要することは想像に難くない。
+　はたしてこの本を読めるようになるまでには、どれくらいの時間が必要なのだろう。高校三年間と大学の初等教程。希海が五年間の歳月をかけて学んできたことを今から教えるのだ。教える分野を絞ったとしても、かなりの手間を要することは想像に難くない。
 「よし……じゃあまず……ええっと、たしかこの辺に」
 　そう言って希海は押入れに頭を突っ込むと、ごそごそと中を漁りだす。しばらくして出てきた希海の髪の毛には、数センチ大の綿ぼこりが絡み付いていた。
 「はいこれ教科書ね。とりあえずここからやろっか」
-　希海がリコに手渡した本の表紙には『高等数学1』という文字が打たれている。高校の頃に使っていたものだ。
+　希海がリコに手渡した本の表紙には『高等数学１』という文字が打たれている。高校の頃に使っていたものだ。
 「こっ……これが教科書ですか」
 　教科書を目の前にしてリコは唾を飲み込んだ。緊張の浮かんだ面持ちのまま表紙を睨みつけ動こうとしない。
-「高1のヤツだから全然簡単だけどね。まずはここからってことで」
+「高一のヤツだから全然簡単だけどね。まずはここからってことで」
 「はっ、はい！　頑張ります！」
 「そんな力まなくていいって。気楽にやろ？　気楽にさ」
 「わかりました！　気楽にやります！」
 「じゃあ……どうする？　さっそくやる？　それとももう遅いから明日にする？」
 「今からやりますっ！」
 
-　時刻は23時53分。
+　時刻は午後十一時五十三分。
 　まもなく日付が変わろうとする深夜のボロアパートにカリカリとペンを走らさる音が響いていた。
 「できましたっ」
 「おっ、なかなか早いわね。どれどれ……」
 　希海はメモ用紙に書かれた計算を手早くチェックしていく。
 「あっ、ここ違うわよ」
 「え！？　どこですか？」
-「ほら、問題3のここ。展開するときに符号変えるの忘れてる」
+「ほら、問題３のここ。展開するときに符号変えるの忘れてる」
 「うぅぅ。上手くできたと思ったのにぃ」
 「この辺はまだ、ちょっとした計算だからね。基本的な部分は理解してるみたいだし、そのうち慣れるって。じゃあ次は……こっちの問題」
 「はい！」
-　そして、再びペンを走らせる音が部屋にこだまする。学校の先生が羨むような勉強意欲だった。熱心に教科書とにらめっこをするリコの横顔を見ていると、2ヶ月前の記憶が鮮明に蘇ってくる。　
+　そして、再びペンを走らせる音が部屋にこだまする。学校の先生が羨むような勉強意欲だった。熱心に教科書とにらめっこをするリコの横顔を見ていると、二ヶ月前の記憶が鮮明に蘇ってくる。　
 『だって私、科学とかそういうの全然分からないから……』
 　それはリコに名前を付けてあげた日のこと。一緒のベッドをふたりで使った日のことだ。
 『だいじょうぶ。もし知らないことがあったら教えてあげるから』
@@ -106,7 +106,7 @@
 　この勉強会だって、いつまで続くかわからない。どうせ、また面倒くさくなって途中で投げ出してしまうかもしれない。でも――
 「あ、ストップ。また同じ間違いしたわよ」
 「えっ！　ど、どこですか？」
-「ほらここ。2行目の変形。計算は落ち着いて丁寧にね」
+「ほらここ。二行目の変形。計算は落ち着いて丁寧にね」
 　でも、やれるだけはやってみよう。
 　リコを見ていると、そんなささやかな勇気が湧いてくる気がしていた。
 </div>
