--- a/hardproblem/2-04.html
+++ b/hardproblem/2-04.html
@@ -24,7 +24,7 @@
 「あっ、希海さん」
 「ちょっと何してんのよ。はやく泳ご？」
 「面白いものを見つけましたよ。ほらっ」
-　リコはそう言って立ち上がり、手中の物体を希海の眼前に突き出してくる。何だろう。さっそく貝殻でも見つけたのだろうか。貝にしては色が随分と黒い。形も変だ。大きさは10cmほどで先端には長い触角が2本――
+　リコはそう言って立ち上がり、手中の物体を希海の眼前に突き出してくる。何だろう。さっそく貝殻でも見つけたのだろうか。貝にしては色が随分と黒い。形も変だ。大きさは10cmほどで先端には長い触角が二本――
 　フナムシだった。
 「どわっ！」
 　突然の大声に周りの海水浴客が振り返る。希海は思わず尻餅を付いてしまっていた。
@@ -43,7 +43,7 @@
 「ちょっとそこ座れ」
 　青空の下でお説教が始まった。
 　体育座りをするリコの前に立ち、希海は切々と自らの主張をリコに説いていく。あんな気持ち悪いものを手に持ってはいけない。リコは怖いとか気持ち悪いとか思わなくても、多くの人は虫に生理的嫌悪感を抱くものだ。ましてやそれを人の眼前に突きつけるなど言語道断の所業。
-　一方のリコは、ぽかんとした表情で弁舌を振るう希海の姿を見上げていた。どうやら虫が気持ち悪いという感覚が理解できないらしく、希海が何を言っても『そうなんですか？』と言わんばかりの生返事をよこしてくる。この調子では何を言っても<ruby>暖簾<rp>《</rp><rt>のれん</rt><rp>》</rp></ruby>に腕押しだ。加えて周囲は気温30°Cを超す炎天下。最初はノリノリで説教をしていた希海も次第に気力を削がれていき、10分ほど経ったところで、ついにさじを投げてしまった。
+　一方のリコは、ぽかんとした表情で弁舌を振るう希海の姿を見上げていた。どうやら虫が気持ち悪いという感覚が理解できないらしく、希海が何を言っても『そうなんですか？』と言わんばかりの生返事をよこしてくる。この調子では何を言っても<ruby>暖簾<rp>《</rp><rt>のれん</rt><rp>》</rp></ruby>に腕押しだ。加えて周囲は気温三十度を超す炎天下。最初はノリノリで説教をしていた希海も次第に気力を削がれていき、十分ほど経ったところで、ついにさじを投げてしまった。
 「はぁ…………。とにかく、これからは変な虫に触らないこと。分かった？」
 「は、はい。わかりました」
 「分かればよし。ところで喉乾かない？　泳ぐ前に何か飲みたいな」
@@ -57,7 +57,7 @@
 「おい」
 　そんな会話の後、少しの間海をお預けにして売店へ向かった。台風が来れば吹き飛んでしまいそうな古びた小屋と、ペンキで殴り書きしたメニューの看板。
 「あーしまった。いまそんな時間か」
-　ちょうど昼時なのもあってか、絵に描いたような海の家には長蛇の列ができていた。この調子だと軽く10分は待たされそうである。もちろん大人しく並んでも良いのだが……。
+　ちょうど昼時なのもあってか、絵に描いたような海の家には長蛇の列ができていた。この調子だと軽く十分は待たされそうである。もちろん大人しく並んでも良いのだが……。
 「リコ、並んどいてよ。その間に場所取ってくるから」
 「えっ！　わ、私ですか？」
 「大丈夫だって。いつも買い物してる近隣センターと同じよ。欲しい物言って代金払えばいいだけ。はいお金」
@@ -93,7 +93,7 @@
 「学会がこの近くであるからって、一足先に研究室のみんなとね。ほかの人達も向こうにいるよ？」
 ――ほかの人達。
 　その単語が、久しく忘れていた顔を希海の脳裏に呼び起こす。
-　かつての同期、今や先輩になってしまった人達。ゼミをすっぽかして迷惑をかけた、明るくて人気者の男の子。友達になろうと話しかけてくれたけれど、もう1年以上会っていない先輩。隣の席の気難しそうな男の子から借りた教科書は、まだ開いてすらいない。
+　かつての同期、今や先輩になってしまった人達。ゼミをすっぽかして迷惑をかけた、明るくて人気者の男の子。友達になろうと話しかけてくれたけれど、もう一年以上会っていない先輩。隣の席の気難しそうな男の子から借りた教科書は、まだ開いてすらいない。
 「そ、そう……。そうなん……だ……ははっ……」
 　ひときわ大きな波が打ち寄せ、大きな歓声が上がった。
 　目の前の相手を直視することができない。希海は手のひらに爪を食い込ませながら、俯きがちにぎこちない笑みを浮かべる。注意を切らすと、今にも膝が震えだしそうだった。
